www/assets/css/style.css
/* Additional styling for timeline */
ul.timeline li { margin-bottom: 12px; }
ul.timeline li timeline-panel { padding: 4px 12px }
.text-muted { color: #999; }
.text-muted i { margin-right: 5px; }

/* Colors for icons in the timeline */
.timeline li timeline-badge.blood-glucose {   background-color: #2e6da4 !important; }
.timeline li timeline-badge.blood-pressure {  background-color: #4EF0D2 !important; }
.timeline li timeline-badge.cholesterol {    background-color: #3f903f !important; }
.timeline li timeline-badge.remark {         background-color: #d9534f !important; }

.timeline li timeline-badge.body-weight {     background-color: #f0ad4e !important; }
.timeline li timeline-badge.body-mass-index { background-color: #5bc0de !important; }

/* Timeline removal */
timeline-event {
  overflow: hidden;
  display: block;
  height: 95px;
  transition: all ease 0.2s;
  -moz-transition: all ease 0.2s;
  -webkit-transition: all ease 0.2s;
  -o-transition: all ease 0.2s;
}
.timeline timeline-event.removed { height: 0px; }
.timeline .delete-icon { color: #999; cursor: pointer; }
.timeline .delete-icon:hover { color: #333; }

/* Specific styling for cholesterol measurements in timeline */
.cholesterol-details { color: #999; font-size: smaller; }
.cholesterol-detail:after { content: ' / ' }
.cholesterol-detail:last-child:after { content: '' }

/* Charts styling: fullscreen charts */
.chart-container { height: 100%; }
.chart-container > .scroll { height: 100%; }

/* Charts styling: tooltips on top */
.d3-tip { z-index: 10; }
.omh-tooltip .threshold-desirable { color: green; }
.omh-tooltip .threshold-borderline_high { color: orange; }
.omh-tooltip .threshold-high { color: red; }

/* Popover with 'add' menu */
 .popover { height: 320px; }

/* Sharing page */
.buttons .col { text-align: center; }
.sharing .buttons .button { min-width: 150px; text-align: left; }
.buttons .button spinner { float: right; }
.buttons .button.icon-left:before { padding-right: 0.4em; margin-top: 0; }

